package com.codecool.marsexploration.data;

public enum Outcome {
    COLONIZABLE,
    NOT_COLONIZABLE_RESOURCES,
    TIMEOUT,
    WRONG_LANDING_COORDINATES,
    NOT_COLONIZABLE_ALIENS,
    FRIENDLY_ALIENS
}
